fixed layout bugs with add buttons.

--- a/Frontend/InventoryApp/src/app/home/categories/category-list/category-list.component.scss
+++ b/Frontend/InventoryApp/src/app/home/categories/category-list/category-list.component.scss
@@ -10,9 +10,9 @@ $main_color: #1e88e5;
   margin-bottom: 1rem;
 }
 .btn-add {
-  float: right;
-  position: relative;
-  top: -55px;
+  position: absolute;
+  top: 8px;
+  right: 1rem;
 }
 .list-group-item{
   border: none;
